--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "axios": "^0.18.0",
+    "element-ui": "^2.5.4",
+    "vuex": "^3.1.0",
+    "jquery": "^3.3.1",
+    "fabric": "^2.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -28,6 +33,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "element-theme-chalk": "^2.10.1",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -49,6 +55,10 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.0.0-beta.2",
+    "sass-loader": "^6.0.6",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
