--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.1",
+    "element-ui": "^2.5.4",
+    "fabric": "^2.7.0",
+    "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "axios": "^0.18.0",
-    "element-ui": "^2.5.4",
-    "vuex": "^3.1.0",
-    "jquery": "^3.3.1",
-    "fabric": "^2.7.0"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
